lesson-13/k/psql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  # namespace: myns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      name: postgres
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          resources:
              limits:
                memory: "256Mi"
                cpu: "100m"
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: mydb
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: mypvc
