lesson-13/k/api-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: api-cluster-ip
spec:
  type: ClusterIP
  selector:
    components: api
  ports:
    - protocol: TCP
      port: 3000
