lesson-13/k/app-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: app-cluster-ip
spec:
  type: ClusterIP
  selector:
    components: app
  ports:
    - protocol: TCP
      port: 80
