lesson-13/k/psql-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: postgress-ip
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
