lesson-13/k/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: demo.test
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: app-cluster-ip
                port: 
                  number: 80
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: api-cluster-ip
                port: 
                  number: 3000
